Implemented plugin + first integration test